# ltgh3

./: .gitignore  Containerfile  Dockerfile  README.md  docker-compose.yml  load_initial_type_of_users.py  manage.py  nginx.conf  podman-compose.yml  pyproject.toml  user_tg.csv
app1/: admin.py  forms.py  models.py  urls.py  views.py
app1/management/commands/: load_initial_question.py  load_initial_region.py  load_initial_user_tg.py  load_initial_veterans_assistant.py
app1/migrations/: 0001_initial.py
app1/static/app1/css/: style.css
app1/templates/app1/: about.html  index.html  question.html  users.html
initial_data/: question.csv  region.txt  type_of_user.csv  veterans_assistant.csv
ltgh3/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
users/: forms.py  views.py
users/templates/users/: login.html
