[tool.poetry]
name = "ltgh3"
version = "0.1.0"
description = ""
authors = ["alukardv"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2.7"
pillow = "^10.1.0"
python-dotenv = "^1.0.0"
django-debug-toolbar = "^4.2.0"
django-model-utils = "^4.3.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
]
